# plover_stdio_dictionary

./: README.md  plover_stdio_dictionary.py  setup.cfg
