[metadata]
name = plover_stdio_dictionary
version = 1.1.0
description = Support for arbitrary applicatins as dictionaries in Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = 42triangles
author_email = 42triangles@tutanota.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/42triangles/plover_stdio_dictionary
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	plover>=4.0.0.dev5
py_modules =
	plover_stdio_dictionary

[options.entry_points]
plover.dictionary =
	sh = plover_stdio_dictionary:StdioDictionary

# vim: commentstring=#\ %s list
